fixed horizontal overflow

--- a/client/src/components/Navbar/index.module.scss
+++ b/client/src/components/Navbar/index.module.scss
@@ -1,7 +1,7 @@
 @import "../../index.scss";
 
 .nav {
-    width: 100vw;
+    width: 100%;
     height: 80px;
     position: relative;
     top: 0;
